fixed spacing on about

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -10,7 +10,7 @@
   display:flex;
   flex-direction:row;
   flex-wrap:wrap;
-  padding: 13% 15% 5% 15%;
+  padding: 0 15% 0 15%;
 }
 
 
@@ -18,7 +18,7 @@
   color: #fff;
   text-align: left;
   font-size: 4em;
-  margin-top: 0;
+  margin-top: 25vh;
 }
 
 #about__container h3 {
@@ -58,6 +58,14 @@
   order: 1;
 }
 
+#about__container > div:nth-child(3) > h3 {
+  margin-bottom: -20px;
+}
+
+#about__container > div:nth-child(3) > h3:last-child {
+  margin-bottom: 0px;
+}
+
 #about__container div:nth-child(3) form {
   padding: 0px;
 }
@@ -75,13 +83,13 @@
 
 @media screen and (max-width: 1200px) {
   #about__container {
-    padding: 15% 15% 0 15%;
+    padding: 0 15% 0 15%;
    }
 }
 
 @media screen and (max-width: 992px) {
   #about__container {
-    padding: 20% 10% 0 10%;
+    padding: 0 10% 0 10%;
    }
    #about__container h1 {
      font-size: 2.8em;
@@ -90,7 +98,7 @@
 
 @media screen and (max-width: 768px) {
   #about__container {
-    padding: 25% 10% 0 10%;
+    padding: 0 10% 0 10%;
    }
    #about__container h3 {
      padding: 0 60px 40px 0;
@@ -102,7 +110,7 @@
 
 @media screen and (max-width: 576px) {
   #about__container {
-    padding: 40% 5% 0 5%;
+    padding: 0 5% 0 5%;
    }
    #about__container h1 {
      font-size: 2.2em;
